# christorch

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
cpp/: playground.cpp
cpp/bindings/: module.cpp  tensor_bindings.cpp
cpp/christl/autograd/: engine.cpp
cpp/christl/ops/: add.cpp  add.h
cpp/christl/tensor/: tensor.h
cpp/christorch/autograd/: engine.cpp
cpp/christorch/ops/: add.cpp  add.h  matmul.cpp  matmul.h
cpp/christorch/tensor/: tensor.cpp  tensor.h
cpp/include/christl/tensor/: tensor.h
cpp/include/christorch/ops/: add.h  matmul.h
cpp/include/christorch/tensor/: tensor.h
cpp/include/core/: dtype.h  type.h  utils.h
cpp/include/debug/: nice_printing.h
cpp/tests/: test_add.cpp  test_tensor.cpp
examples/: demo.py  quickstart.py
python/christl/: __init__.py  tensor.py
python/christorch/: __init__.py  tensor.py
tests/python/: test_add.py
